# eventstore-rs

./: Cargo.toml  Makefile  README.md
.github/workflows/: build.yml
src/: lib.rs
src/backend/: model.rs  sqlite.rs
tests/: integration_test.rs
